--- a/MenuBI/app/src/main/res/layout/activity_main.xml
+++ b/MenuBI/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,63 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/food1"
+    android:background="@drawable/food6"
     tools:context=".MainActivity">
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_centerInParent="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
+        <TextView
+            android:id="@+id/txtmenubi"
+            android:layout_width="200dp"
+            android:layout_height="94dp"
+            android:gravity="center"
+            android:text="@string/menu"
+            android:textColor="#09520C"
+            android:textSize="40sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/txtSlogan"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/slogan"
+            android:textColor="@android:color/white"
+
+            />
+    </LinearLayout>
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true"
+        android:weightSum="2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    <info.hoang8f.widget.FButton
+        android:id="@+id/btnSignup"
+        android:text="S'inscrire"
+        android:layout_weight="1"
+        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:textColor="@android:color/white"
+        android:layout_margin="8dp"
+
+
+        />
+        <info.hoang8f.widget.FButton
+            android:id="@+id/btnSignin"
+            android:text="Connecter"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:textColor="@android:color/white"
+            android:layout_margin="8dp"
+
+
+
+            />
+    </LinearLayout>
 
 </RelativeLayout>
