--- a/MenuBI/app/src/main/res/layout/activity_main.xml
+++ b/MenuBI/app/src/main/res/layout/activity_main.xml
@@ -5,12 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/food6"
+    android:foreground="@color/common_google_signin_btn_text_dark_disabled"
     tools:context=".MainActivity">
+
     <LinearLayout
-        android:orientation="vertical"
-        android:layout_centerInParent="true"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/txtmenubi"
@@ -19,45 +21,51 @@
             android:gravity="center"
             android:text="@string/menu"
             android:textColor="#09520C"
-            android:textSize="40sp"
-            android:textStyle="bold" />
+            android:textSize="45sp"
+            android:textStyle="bold|italic"
+            android:typeface="serif"
+            android:visibility="visible" />
 
         <TextView
             android:id="@+id/txtSlogan"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
+
             android:gravity="center"
             android:text="@string/slogan"
             android:textColor="@android:color/white"
-
-            />
+            android:textSize="18sp"
+            android:textStyle="italic"
+            android:typeface="monospace" />
     </LinearLayout>
+
     <LinearLayout
-        android:orientation="horizontal"
-        android:layout_alignParentBottom="true"
-        android:weightSum="2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    <info.hoang8f.widget.FButton
-        android:id="@+id/btnSignup"
-        android:text="S'inscrire"
-        android:layout_weight="1"
         android:layout_height="wrap_content"
-        android:layout_width="0dp"
-        android:textColor="@android:color/white"
-        android:layout_margin="8dp"
+        android:layout_alignParentBottom="true"
+        android:orientation="horizontal"
+        android:weightSum="2">
 
+        <info.hoang8f.widget.FButton
+            android:id="@+id/btnSignup"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:layout_weight="1"
+            android:backgroundTint="@color/btnSignup"
+            android:text="S'inscrire"
+            android:textColor="@android:color/white"
+            app:buttonColor="#4CAF50" />
 
-        />
         <info.hoang8f.widget.FButton
             android:id="@+id/btnSignin"
-            android:text="Connecter"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
             android:layout_width="0dp"
-            android:textColor="@android:color/white"
+            android:layout_height="wrap_content"
             android:layout_margin="8dp"
-
+            android:layout_weight="1"
+            android:text="Connecter"
+            android:backgroundTint="@color/colorPrimary"
+            android:textColor="@android:color/white"
 
 
             />
