--- a/MenuBI/app/src/main/res/menu/home.xml
+++ b/MenuBI/app/src/main/res/menu/home.xml
@@ -4,6 +4,12 @@
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="Paramètres"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_help"
+        android:orderInCategory="100"
+        android:title="Guide d'utilisation"
         app:showAsAction="never" />
 </menu>
