--- a/MenuBI/app/src/main/res/layout/activity_admin_dashbord.xml
+++ b/MenuBI/app/src/main/res/layout/activity_admin_dashbord.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.menubi.AdminDashbord"
+    tools:context=".AdminDashbord"
     android:orientation="vertical"
     android:padding="10dp"
     android:background="#fcfcfc"
@@ -55,7 +55,9 @@
                     android:textColor="@android:color/darker_gray"/>
 
             </LinearLayout>
+
         </androidx.cardview.widget.CardView>
+
         <androidx.cardview.widget.CardView
             android:foreground="?android:attr/selectableItemBackground"
             android:clickable="true"
@@ -186,5 +188,5 @@
         </androidx.cardview.widget.CardView>
 
     </LinearLayout>
-
+-->
 </LinearLayout>
