--- a/MenuBI/app/src/main/res/layout/activity_page_guide.xml
+++ b/MenuBI/app/src/main/res/layout/activity_page_guide.xml
@@ -5,72 +5,72 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".PageGuide">
+    <!--
+       <RelativeLayout
+           android:id="@+id/relativeLayout"
+           android:layout_width="match_parent"
+           android:layout_height="400dp"
+           android:orientation="vertical"
+           tools:ignore="MissingConstraints">
 
-    <RelativeLayout
-        android:id="@+id/relativeLayout"
-        android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:orientation="vertical"
-        tools:ignore="MissingConstraints">
-
-        <LinearLayout
-            android:id="@+id/linearLayout"
-            android:layout_width="match_parent"
-            android:layout_height="350dp"
-            android:background="@drawable/gradientbackground"
-            android:orientation="vertical">
-
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="30dp"
-                android:layout_marginBottom="30dp"
-                android:src="@drawable/food1" />
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="400dp"
-                android:layout_height="100dp"
-                android:layout_center_Horizontal="true"
-                android:layout_marginTop="275dp"
-                android:layout_marginRight="11dp"
-                android:background="@color/endblue"
-                android:text="guide d'utilisation">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal"
-                    android:weightSum="3">
-
-                    <TextView
-                        android:id="@+id/textView4"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="TextView" />
-
-                    <LinearLayout
-                        android:layout_width="4dp"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical"
-                        android:weight="1">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Guide d'utilisation"
-                            android:textSize="21dp"
-                            android:textStyle="bold" />
-                        <!-- android:layout_gravity="center_horizontal"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="25dp"
-            android:textColor="#fff"-->
+           <LinearLayout
+               android:id="@+id/linearLayout"
+               android:layout_width="match_parent"
+               android:layout_height="350dp"
+               android:background="@drawable/gradientbackground"
+               android:orientation="vertical">
 
 
-                    </LinearLayout>
-                </LinearLayout>
+               <ImageView
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:layout_gravity="center_horizontal"
+                   android:layout_marginTop="30dp"
+                   android:layout_marginBottom="30dp"
+                   android:src="@drawable/food1" />
+
+               <androidx.cardview.widget.CardView
+                   android:layout_width="400dp"
+                   android:layout_height="100dp"
+                   android:layout_center_Horizontal="true"
+                   android:layout_marginTop="275dp"
+                   android:layout_marginRight="11dp"
+                   android:background="@color/endblue"
+                   android:text="guide d'utilisation">
+
+                   <LinearLayout
+                       android:layout_width="match_parent"
+                       android:layout_height="match_parent"
+                       android:orientation="horizontal"
+                       android:weightSum="3">
+
+                       <TextView
+                           android:id="@+id/textView4"
+                           android:layout_width="wrap_content"
+                           android:layout_height="wrap_content"
+                           android:layout_weight="1"
+                           android:text="TextView" />
+
+                        <LinearLayout
+                            android:layout_width="4dp"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical"
+                            android:weight="1">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Guide d'utilisation"
+                                android:textSize="21dp"
+                                android:textStyle="bold" />
+                             android:layout_gravity="center_horizontal"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="25dp"
+                android:textColor="#fff
+
+
+                       </LinearLayout>
+                   </LinearLayout>
             </androidx.cardview.widget.CardView>
         </LinearLayout>
 
@@ -91,13 +91,7 @@
             android:gravity="center"/>
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingLeft="25dp"
-        >
 
-    </LinearLayout>
 
     <ImageView
         android:id="@+id/imageView2"
@@ -113,7 +107,7 @@
         app:layout_constraintEnd_toStartOf="@+id/textView2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
-        app:srcCompat="@drawable/ic_add_black_24dp" />
+        android:src="@drawable/ic_add_black_24dp" />
 
     <ImageView
         android:id="@+id/imageView3"
@@ -129,7 +123,7 @@
         app:layout_constraintEnd_toStartOf="@+id/textView3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        app:srcCompat="@drawable/ic_check_circle_black_24dp" />
+        android:src="@drawable/ic_check_circle_black_24dp"/>
 
     <TextView
         android:id="@+id/textView2"
@@ -191,6 +185,6 @@
         app:layout_constraintEnd_toStartOf="@+id/textView5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView3"
-        app:srcCompat="@drawable/ic_keyboard_return_black_24dp" />
-
+        android:src="@drawable/ic_keyboard_return_black_24dp" />
+    -->
 </androidx.constraintlayout.widget.ConstraintLayout>
