--- a/MenuBI/app/src/main/res/layout/activity_signin.xml
+++ b/MenuBI/app/src/main/res/layout/activity_signin.xml
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Reference de la table"
-            android:inputType="phone"
+            android:inputType="text"
             android:textColor="@android:color/white"
             android:textColorHint="@android:color/white"
             android:textSize="34sp"
