--- a/MenuBI/app/src/main/res/values/colors.xml
+++ b/MenuBI/app/src/main/res/values/colors.xml
@@ -5,4 +5,15 @@
     <color name="colorAccent">#D81B60</color>
     <color name="btnSignup">#39796B</color>
     <color name="btnSignActive">#A9d440</color>
+    <color name="backgroundcolor">#fcfcfc</color>
+    <color name="lightgray">#ededed</color>
+    <color name="deeppurple">#7c4dff</color>
+    <color name="yello">#ffb300</color>
+    <color name="green">#00bfa5</color>
+    <color name="darkblue">#23283a</color>
+    <color name="testcolorblue">#152b38</color>
+    <color name="pink">#fe104d</color>
+
+    <color name="black_overlay">#40781F1F</color>
+
 </resources>
