--- a/MenuBI/app/src/main/res/layout/activity_liste_plat.xml
+++ b/MenuBI/app/src/main/res/layout/activity_liste_plat.xml
@@ -5,5 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ListePlat">
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/reci_food"
+        android:scrollbars="vertical"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
