--- a/MenuBI/app/src/main/res/layout/content_home.xml
+++ b/MenuBI/app/src/main/res/layout/content_home.xml
@@ -5,9 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/app_bar_main">
+    tools:showIn="@layout/app_bar_home">
 
-    <fragment
+   <!-- <fragment
         android:id="@+id/nav_host_fragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
@@ -16,5 +16,10 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:navGraph="@navigation/mobile_navigation" />
+        app:navGraph="@navigation/mobile_navigation" />-->
+       <androidx.recyclerview.widget.RecyclerView
+           android:id="@+id/reci_menu"
+           android:scrollbars="vertical"
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"></androidx.recyclerview.widget.RecyclerView>
 </androidx.constraintlayout.widget.ConstraintLayout>
