--- a/MenuBI/app/src/main/res/values/colors.xml
+++ b/MenuBI/app/src/main/res/values/colors.xml
@@ -17,5 +17,7 @@
     <color name="darkblue">#23283a</color>
     <color name="testcolorblue">#152b38</color>
     <color name="pink">#fe104d</color>
-    <color name="black_overlay">#66000000</color>
+    <color name="black_overlay">#7f333639</color>
+    <color name="overlay_ActionBar">#0e0d0e</color>
+    <color name="overlay_back">#66000000</color>
 </resources>
