--- a/MenuBI/app/src/main/res/values/colors.xml
+++ b/MenuBI/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="colorAccent">#D81B60</color>
     <color name="btnSignup">#39796B</color>
     <color name="btnSignActive">#A9d440</color>
+    <color name="background">#EEEDEF</color>
 </resources>
