--- a/MenuBI/app/src/main/res/layout/activity_page_guide.xml
+++ b/MenuBI/app/src/main/res/layout/activity_page_guide.xml
@@ -97,8 +97,8 @@
         android:id="@+id/imageView2"
         android:layout_width="69dp"
         android:layout_height="43dp"
-        android:layout_marginStart="38dp"
-        android:layout_marginLeft="38dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginLeft="40dp"
         android:layout_marginTop="14dp"
         android:layout_marginEnd="26dp"
         android:layout_marginRight="26dp"
@@ -155,6 +155,22 @@
         app:layout_constraintStart_toEndOf="@+id/imageView3"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="231dp"
+        android:layout_height="44dp"
+        android:layout_marginStart="46dp"
+        android:layout_marginLeft="46dp"
+        android:layout_marginTop="64dp"
+        android:layout_marginEnd="27dp"
+        android:layout_marginRight="27dp"
+        android:layout_marginBottom="136dp"
+        android:text="Bouton retour pour invalider"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView4"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
     <ImageView
         android:id="@+id/imageView4"
         android:layout_width="64dp"
@@ -162,8 +178,11 @@
         android:layout_marginStart="38dp"
         android:layout_marginLeft="38dp"
         android:layout_marginTop="11dp"
+        android:layout_marginEnd="49dp"
+        android:layout_marginRight="49dp"
         android:layout_marginBottom="134dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/textView5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView3"
         android:src="@drawable/ic_keyboard_return_black_24dp" />
