--- a/MenuBI/app/src/main/res/layout/plat_item.xml
+++ b/MenuBI/app/src/main/res/layout/plat_item.xml
@@ -15,16 +15,32 @@
             android:src="@drawable/food6"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
-        <TextView
-            android:id="@+id/food_name"
-            android:text="Nom du Plat"
-            android:textColor="@android:color/white"
-            android:background="#4f0e0d0e"
-            android:textSize="20dp"
-            android:gravity="center"
-            android:layout_alignParentBottom="true"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+       <LinearLayout
+           android:weightSum="10"
+           android:orientation="horizontal"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:background="#4f0e0d0e"
+           android:layout_alignParentBottom="true">
+
+           <TextView
+               android:id="@+id/food_name"
+               android:text="Nom du Plat"
+               android:textColor="@android:color/white"
+
+               android:textSize="20dp"
+               android:gravity="center"
+                android:layout_weight="9"
+               android:layout_width="0dp"
+               android:layout_height="wrap_content"/>
+           <ImageView
+               android:id="@+id/fav"
+               android:src="@drawable/ic_favorite_border_black_24dp"
+               android:tint="@android:color/white"
+               android:layout_weight="1"
+               android:layout_width="0dp"
+               android:layout_height="wrap_content"/>
+       </LinearLayout>
 
     </RelativeLayout>
 
