--- a/MenuBI/app/src/main/res/layout/plat_item.xml
+++ b/MenuBI/app/src/main/res/layout/plat_item.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="200dp"
     app:cardElevation="4dp"
     android:layout_marginBottom="8dp"
