--- a/MenuBI/app/src/main/res/layout/activity_ajoute_plat.xml
+++ b/MenuBI/app/src/main/res/layout/activity_ajoute_plat.xml
@@ -33,7 +33,7 @@
         tools:ignore="MissingConstraints" />
 
     <Spinner
-        android:id="@+id/activity_main_name_input"
+        android:id="@+id/categorie"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
@@ -77,7 +77,7 @@
         android:layout_alignParentLeft="true"
         android:layout_marginTop="32dp"
         android:text="Valider"
-        app:layout_constraintTop_toBottomOf="@+id/activity_main_name_input"
+        app:layout_constraintTop_toBottomOf="@+id/categorie"
         tools:layout_editor_absoluteX="259dp"
         tools:ignore="MissingConstraints" />
 
