--- a/MenuBI/app/src/main/res/values/styles.xml
+++ b/MenuBI/app/src/main/res/values/styles.xml
@@ -22,6 +22,12 @@
         <item name="android:textStyle">normal</item>
     </style>
 
+    <!-- Evaluation -->
+    <style name="RatingDialogStyle" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="android:background">@android:color/white</item>
+        <!--item name="android:buttonBarPositiveButtonStyle">@style/RatingDialogButtonStyle</item-->
+
+    </style>
 
 
 </resources>
