--- a/MenuBI/app/src/main/res/menu/activity_home_drawer.xml
+++ b/MenuBI/app/src/main/res/menu/activity_home_drawer.xml
@@ -13,7 +13,7 @@
         <item
             android:id="@+id/nav_orders"
             android:icon="@drawable/ic_access_time_black_24dp"
-            android:title="Orders" />-->
+            android:title="Orders" />
         <item
             android:id="@+id/nav_logOut"
             android:icon="@drawable/ic_exit_to_app_black_24dp"
@@ -22,7 +22,7 @@
             android:id="@+id/action_help"
             android:orderInCategory="100"
             android:icon="@drawable/ic_smartphone_black_24dp"
-            android:title="Guide d'utilisation" />
+            android:title="Guide d'utilisation" />-->
 
     </group>
 
